2010-12-03  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/module/Module_generated_Constructor.h: Applied
	patch by Tama Ma <pingnang@phys.ethz.ch> for up to seven args in ctor
	* inst/include/Rcpp/module/Module_generated_class_constructor.h: Idem

2010-12-03  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/RObject.h : new inline method inherits that
	checks if an object inherits from a given class (wrapper around
	Rf_inherits)

	* inst/unitTests/runit.RObject.R: unit test for the above

2010-12-02  Douglas Bates  <bates@stat.wisc.edu>

	* inst/include/Rcpp/generated/Function__operator.h,
	  inst/include/Rcpp/Function.h: operator() becomes const.

2010-11-29  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/vector/Vector.h: trying to please suncc after
	CRAN checks

	* R/Module.R: protect the module$refClassGenerators <- generators
	line against the case where there are no classes (triggered a
	problem with the parser package)

2010-11-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.8.9

        * debian/*: Similarly updated for new release to Debian

2010-11-26  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/vector/Vector.h: List::create( _["foo"] ) sets
	the SEXP to R_MissingArg, usueful for formal arguments
	specifications, simpler form than List::create( _["foo"] =
	R_MissingArg )

	* inst/include/Rcpp/macros/unroll.h: helper macro RCPP_UNROLL_LOOP

	* inst/include/Rcpp/vector/MatrixColumn.h: added
	MatrixColumn::operator=( MatrixColumn& ) otherwise it gets
	synthetized by the compiler

	* inst/include/Rcpp/vector/MatrixRow.h: same for MatrixRow

	* inst/include/Rcpp/vector/Matrix.h: added Matrix( SubMatrix ) and
	Matrix::operator=( SubMatrix )

2010-11-25  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/module/Module_generated_function.h: new .function
	with formal argument specification

	* inst/include/Rcpp/module/Module_generated_CppFunction.h: helper