@@ -97,4 +97,20 @@ inline const char* ctor_signature( const std::string& classname ){
     return s.c_str() ;
 }
 
+template <typename U0, typename U1, typename U2, typename U3, typename U4, typename U5, typename U6>
+inline const char* ctor_signature( const std::string& classname ){
+    std::string s( classname ) ;
+    s += "(" ; 
+    s += get_return_type<U0>() ;
+    s += ", " ; s+= get_return_type<U1>() ;
+    s += ", " ; s+= get_return_type<U2>() ;
+    s += ", " ; s+= get_return_type<U3>() ;
+    s += ", " ; s+= get_return_type<U4>() ;
+    s += ", " ; s+= get_return_type<U5>() ;
+    s += ", " ; s+= get_return_type<U6>() ;
+    s += ")" ;
+    return s.c_str() ;
+}
+
+
 #endif
